[gd_scene load_steps=11 format=2]

[ext_resource path="res://App/Modules/Screens/Folders/FoldersScreen.gd" type="Script" id=1]
[ext_resource path="res://App/Interface/IconButton/IconButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://App/Icons/generic_add.svg" type="Texture" id=3]
[ext_resource path="res://App/Interface/ListView/ListView.tscn" type="PackedScene" id=4]
[ext_resource path="res://App/Modules/Screens/Folders/FoldersListView.gd" type="Script" id=5]
[ext_resource path="res://App/Modules/Screens/Folders/FolderView.tscn" type="PackedScene" id=6]
[ext_resource path="res://App/Interface/DropContainer/DropContainer.tscn" type="PackedScene" id=7]
[ext_resource path="res://App/Modules/PlayableTrackList/PlayableTrackList.tscn" type="PackedScene" id=8]
[ext_resource path="res://App/Icons/generic_down.svg" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FoldersScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoldersView" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
size_flags_vertical = 3
script = ExtResource( 5 )
item_scene = ExtResource( 6 )
editable = true

[node name="Container" parent="FoldersView" index="0"]
margin_right = 1266.0

[node name="Extra" type="VBoxContainer" parent="FoldersView"]
margin_right = 1266.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Space" type="Control" parent="FoldersView/Extra"]
margin_right = 1266.0
mouse_filter = 2

[node name="Add" parent="FoldersView/Extra" instance=ExtResource( 2 )]
margin_left = 609.0
margin_right = 657.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
texture = ExtResource( 3 )
hint = "FOLDERS_CREATE"

[node name="FolderContainer" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="PlayableTrackList" parent="FolderContainer" instance=ExtResource( 8 )]
visible = false
margin_top = 706.0
margin_right = 1266.0
margin_bottom = 1412.0

[node name="Top" parent="FolderContainer/PlayableTrackList" index="0"]
margin_right = 1266.0

[node name="Drop" parent="FolderContainer/PlayableTrackList/Top" index="0" instance=ExtResource( 2 )]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 2
texture = ExtResource( 9 )
icon_size = 0.75

[node name="Title" parent="FolderContainer/PlayableTrackList/Top" index="1"]
margin_left = 34.0
margin_right = 1198.0

[node name="Remove" parent="FolderContainer/PlayableTrackList/Top" index="2"]
margin_left = 1202.0
margin_right = 1232.0

[node name="Play" parent="FolderContainer/PlayableTrackList/Top" index="3"]
margin_left = 1236.0
margin_right = 1266.0

[node name="Contents" parent="FolderContainer/PlayableTrackList" index="1"]
margin_right = 1266.0
margin_bottom = 706.0
custom_styles/panel = SubResource( 1 )

[node name="TrackListView" parent="FolderContainer/PlayableTrackList/Contents" index="0"]
margin_right = 1266.0
margin_bottom = 672.0

[node name="Empty" parent="FolderContainer/PlayableTrackList/Contents" index="1"]
margin_top = 329.0
margin_right = 1266.0
margin_bottom = 343.0

[connection signal="visibility_changed" from="." to="." method="_on_FoldersScreen_visibility_changed"]
[connection signal="opened" from="FoldersView" to="." method="open"]
[connection signal="pressed" from="FoldersView/Extra/Add" to="." method="_on_Add_pressed"]
[connection signal="removed" from="FolderContainer/PlayableTrackList" to="." method="_on_PlayableTrackList_removed"]
[connection signal="pressed" from="FolderContainer/PlayableTrackList/Top/Drop" to="." method="_on_Drop_pressed"]

[editable path="FoldersView"]
[editable path="FolderContainer/PlayableTrackList"]
